# magent

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_IMPROVEMENTS.md  PLAN-SKILLS.md  README-zh.md  README.md  README.org  magent-acp.el  magent-agent-file.el  magent-agent-info.el  magent-agent-job.el  magent-agent-loop.el  magent-agent-registry.el  magent-agent-shell.el  magent-agent-types.el  magent-agent.el  magent-approval.el  magent-audit.el  magent-backend-fsm.el  magent-backend-gptel.el  magent-backend.el  magent-capability-file.el  magent-capability.el  magent-config.el  magent-context.el  magent-events.el  magent-evil.el  magent-file-loader.el  magent-frontmatter.el  magent-fsm-backend-gptel.el  magent-fsm-backend-native.el  magent-fsm-refactored.el  magent-fsm-shared.el  magent-fsm-tools.el  magent-fsm.el  magent-happy.el  (+33 more)
benchmark/: .dockerignore  .gitignore  Makefile  README.md  config.example.toml  docker-compose.proxy.yaml  emacs-bundle.Dockerfile  magent-benchmark-suite.el  magent-benchmark.el  profiles.toml  pyproject.toml  run-benchmark.el
benchmark/elisp/: install-deps.el  runner.el
benchmark/fixtures/org-suite/: benchmark-org-suite.org
benchmark/fixtures/plain-project/: README.md
benchmark/fixtures/runtime/: benchmark-elisp-runtime.el
benchmark/magent_benchmark/: __init__.py  cli.py  harbor_agent.py  job.py  profiles.py  report.py
benchmark/manifests/: swe-bench-verified.txt  terminal-bench-2.1.txt
benchmark/tests/: runner-test.el  test_harbor_agent.py  test_profiles.py  test_report.py
(+248 files in other folders)
